fix image stretching bug

--- a/react/src/components/Header/Header.module.scss
+++ b/react/src/components/Header/Header.module.scss
@@ -44,10 +44,13 @@ header {
 
   .profileContainer {
     position: relative;
+    width: 70px;
+    height: 70px;
 
     .profile {
-      width: 70px;
-      height: 70px;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       border-radius: 50%;
       border: 2px solid $primary-color;
       box-shadow: 0 0 5px $primary-color, 0 0 10px $primary-color;
