--- a/react/src/components/Profile/Profile.module.scss
+++ b/react/src/components/Profile/Profile.module.scss
@@ -44,6 +44,7 @@ $button-radius: 5px;
   .avatar {
     width: 100px;
     height: 100px;
+    object-fit: cover;
     border-radius: 50%;
     margin-bottom: 20px;
     border: 2px solid $primary-color;
